--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/vue-fontawesome": "^3.0.8",
     "axios": "^1.7.2",
+    "multi-range-slider-vue": "^1.1.4",
     "sass": "^1.77.8",
     "vue": "^3.4.29",
     "vue-router": "^4.4.0"
